build_output.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:dataBindingMergeDependencyArtifactsDebug UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:processDebugNavigationResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:dataBindingGenBaseClassesDebug UP-TO-DATE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:compileDebugNavigationResources UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE

> Task :app:compileDebugJavaWithJavac
C:\Users\Laptop\AndroidStudioProjects\MySoftPOS\app\src\main\java\com\example\mysoftpos\testsuite\TestCaseEditorActivity.java:96: error: no suitable constructor found for TestCase(String,String,String,String,String,String,String,boolean,boolean,Long)
            com.example.mysoftpos.testsuite.model.TestCase tc = new com.example.mysoftpos.testsuite.model.TestCase(
                                                                ^
    constructor TestCase.TestCase(String,String,String,String,String,String,String,boolean,boolean,Long,String) is not applicable
      (actual and formal argument lists differ in length)
    constructor TestCase.TestCase(String,String,String,String,String,String,String,boolean,boolean) is not applicable
      (actual and formal argument lists differ in length)
Note: C:\Users\Laptop\AndroidStudioProjects\MySoftPOS\app\src\main\java\com\example\mysoftpos\ui\txn\TransactionResultActivity.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: C:\Users\Laptop\AndroidStudioProjects\MySoftPOS\app\src\main\java\com\example\mysoftpos\iso8583\SmartIsoBuilder.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error

> Task :app:compileDebugJavaWithJavac FAILED

[Incubating] Problems report is available at: file:///C:/Users/Laptop/AndroidStudioProjects/MySoftPOS/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  C:\Users\Laptop\AndroidStudioProjects\MySoftPOS\app\src\main\java\com\example\mysoftpos\testsuite\TestCaseEditorActivity.java:96: error: no suitable constructor found for TestCase(String,String,String,String,String,String,String,boolean,boolean,Long)
              com.example.mysoftpos.testsuite.model.TestCase tc = new com.example.mysoftpos.testsuite.model.TestCase(
                                                                  ^
      constructor TestCase.TestCase(String,String,String,String,String,String,String,boolean,boolean,Long,String) is not applicable
        (actual and formal argument lists differ in length)
      constructor TestCase.TestCase(String,String,String,String,String,String,String,boolean,boolean) is not applicable
        (actual and formal argument lists differ in length)
  Note: C:\Users\Laptop\AndroidStudioProjects\MySoftPOS\app\src\main\java\com\example\mysoftpos\ui\txn\TransactionResultActivity.java uses or overrides a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  Note: C:\Users\Laptop\AndroidStudioProjects\MySoftPOS\app\src\main\java\com\example\mysoftpos\iso8583\SmartIsoBuilder.java uses unchecked or unsafe operations.
  Note: Recompile with -Xlint:unchecked for details.
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 3s
19 actionable tasks: 1 executed, 18 up-to-date
